@@ -136,6 +136,29 @@ KupuEditor.prototype.afterInit = function() {
     } else if (doc.attachEvent) {
         doc.attachEvent('onkeydown', tabbing_handler);
     };
+
+    var table_spacing_handler = function(event) {
+        if (window.event) event = window.event;
+        /* if shift+ctrl+enter is pressed while inside a
+            table, add a new paragraph at the end */
+        if (event.keyCode == 13 && event.ctrlKey && event.shiftKey) {
+            var selNode = kupu.getSelectedNode();
+            var table = kupu.getNearestParentOfType(selNode,'table');
+            if (table) {
+                var sel = doc.createElement('p');
+                sel.appendChild(doc.createTextNode('\xa0'));
+                table.parentNode.insertBefore(sel,table.nextSibling)
+                var selection = kupu.getSelection();
+                selection.selectNodeContents(sel);
+                selection.collapse()
+            }
+        }
+    }
+    if (doc.addEventListener) {
+        doc.addEventListener('keydown', table_spacing_handler, true);
+    } else if (doc.attachEvent) {
+        doc.attachEvent('onkeydown', table_spacing_handler);
+    };
 };
 
 function initSilvaKupu(iframe) {
